Fix missing colors and includes

--- a/meinberlin/assets/scss/_variables.scss
+++ b/meinberlin/assets/scss/_variables.scss
@@ -1,5 +1,8 @@
 // subset of bootstrap variables
 
+$gray: #464a4c !default;
+$gray-light: #636c72 !default;
+
 $brand-primary: #cd0055 !default;
 $brand-primary-tint: #f5ccdd !default;
 $brand-secondary: #253276 !default;
